# GS-DBEngine

./: .gitignore  Architecture.md  CMakeLists.txt  README.md  Structure.md
cli/: main.cpp
cmake/: GSDBEngineConfig.cmake.in
docs/: Architecture.md  DECISIONS.md  STATUS.md  Structure.md  TODO.md
src/: database.cpp  database.h
src/btree/: btree.cpp  btree.h  btree_node.cpp  btree_node.h  free_list_manager.cpp  free_list_manager.h  key.cpp  key.h
src/catalog/: catalog_manager.cpp  catalog_manager.h  schema.h
src/executor/: executor.cpp  executor.h
src/header/: header_manager.cpp  header_manager.h
src/index/: index.cpp  index.h
src/parser/: ast.h  parser.cpp  parser.h  token.h  tokenizer.cpp  tokenizer.h
src/row/: row.h  serializer.cpp  serializer.h
src/storage/: buffer_pool.cpp  buffer_pool.h  disk_manager.cpp  disk_manager.h  header_manager.cpp  header_manager.h  page.h
src/table/: table.cpp  table.h
src/wal/: wal_manager.cpp  wal_manager.h
tests/: gsdb  gsdb_temp  smoke.sql  smoke2.sql  smoke3.sql  smoke4.sql  smoke5.sql  test_btree  test_btree.cpp  test_btree_node  test_btree_node.cpp  test_catalog  test_catalog.cpp  test_database  test_database.cpp  test_executor  test_executor.cpp  test_foreign_key_manual.cpp  test_header_manager  test_header_manager.cpp  test_index.cpp  test_parser  test_parser.cpp  test_pk_mutability_manual.cpp  test_row  test_row.cpp  test_storage  test_storage.cpp  test_table  test_table.cpp  test_table_indexes.cpp  test_tokenizer  test_tokenizer.cpp  test_unique_constraint_manual.cpp  test_wal  test_wal.cpp
